...
            secondVC.delegate = self
    }

    @IBAction func loginTapped(_ sender: Any) {
        
        if (insertEmail.text?.isEmpty)! || (insertPass.text?.isEmpty)! {
            let refreshAlert = UIAlertController(title: "Error", message: "Password or email cant be empty!", preferredStyle: UIAlertController.Style.alert)
            refreshAlert.addAction(UIAlertAction(title: "Try again", style: .cancel, handler: { (action: UIAlertAction!) in
                
            }))
            self.present(refreshAlert, animated: true, completion: nil)
        } else {
            databaseLoad.alpha = 1
            databaseLoad.startAnimating()
...
