...
                                <color key="backgroundColor" red="0.015686274510000001" green="0.49803921569999998" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="EJF-rr-Oi9"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <size key="titleShadowOffset" width="2" height="3"/>
                                <state key="normal" title="Log in">
                                    <color key="titleColor" red="0.86274509799999999" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="loginTapped:" destination="dmA-bA-F6a" eventType="touchUpInside" id="P8q-Hg-tyA"/>
                                </connections>
                            </button>
...
